update price color

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
 
  <!-- CARD STANDARD PRICE-->
 <div class="cards-sty">
-    <DIV CLASS="TITLE-CARD-STYLE"><h1 class="title-st">PERSONAL</h1></DIV>
+    <DIV CLASS="TITLE-CARD-STYLE2"><h1 class="title-st">PERSONAL</h1></DIV>
     <div class="cards-continut">
      <div class="card-choice">
          <div class="pret">
@@ -245,7 +245,7 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
                  <p class="ron-price">RON</p>
              </div>
          </div>
-         <button type="button" class="button-sty">
+         <button type="button" class="button-sty2">
              Alege
          </button>
          <div class="price-details">
@@ -264,7 +264,7 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
 
  <!-- CARD PREMIUM PRICE-->
  <div class="cards-sty">
-    <DIV CLASS="TITLE-CARD-STYLE"><h1 class="title-st">PERSONAL +</h1></DIV>
+    <DIV CLASS="TITLE-CARD-STYLE3"><h1 class="title-st">PERSONAL +</h1></DIV>
     <div class="cards-continut">
      <div class="card-choice">
          <div class="pret">
@@ -273,7 +273,7 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
                  <p class="ron-price">RON</p>
              </div>
          </div>
-         <button type="button" class="button-sty">
+         <button type="button" class="button-sty3">
              Alege
          </button>
          <div class="price-details">
