update price popular style

--- a/index.html
+++ b/index.html
@@ -263,8 +263,10 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
  </div>
 
  <!-- CARD PREMIUM PRICE-->
- <div class="cards-sty">
-    <DIV CLASS="TITLE-CARD-STYLE3"><h1 class="title-st">PERSONAL +</h1></DIV>
+ <div class="cards-sty-plus">
+    <DIV CLASS="TITLE-CARD-STYLE3">
+      <span class="card-popular-plus">POPULAR</span>
+      <h1 class="title-st">PERSONAL +</h1></DIV>
     <div class="cards-continut">
      <div class="card-choice">
          <div class="pret">
