update price popular style

--- a/price.html
+++ b/price.html
@@ -109,94 +109,98 @@ Navbar -->
 <div class="cards-gap">
 
     <!-- card GRATUIT-->
-<div class="cards-sty">
-   <DIV CLASS="TITLE-CARD-STYLE"><h1 class="title-st">GRATUIT</h1></DIV>
-   <div class="cards-continut">
-    <div class="card-choice">
-        <div class="pret">
-            <div class="number-price">
-                <h3 CLASS="NUMBER-PRICE-STYLE">0</h3>
-                <p class="ron-price">RON</p>
+
+    <!-- card GRATUIT-->
+    <div class="cards-sty">
+      <DIV CLASS="TITLE-CARD-STYLE"><h1 class="title-st">GRATUIT</h1></DIV>
+      <div class="cards-continut">
+       <div class="card-choice">
+           <div class="pret">
+               <div class="number-price">
+                   <h3 CLASS="NUMBER-PRICE-STYLE">0</h3>
+                   <p class="ron-price">RON</p>
+               </div>
+           </div>
+           <button type="button" class="button-sty">
+               Alege
+           </button>
+           <div class="price-details">
+               <p>pănă la 10 răspunsuri</p>
+               <p>upload imagini până la 3Mb</p>
+               <p>formular de confirmare cu până la 5 întrebări</p>
+               <p>invitație online personalizată</p>
+               <p>link unic invitație</p>
+               <p>confirmări instant</p>
+           </div>
+       </div>
+      </div> 
+   </div>
+   
+    <!-- CARD STANDARD PRICE-->
+   <div class="cards-sty">
+       <DIV CLASS="TITLE-CARD-STYLE2"><h1 class="title-st">PERSONAL</h1></DIV>
+       <div class="cards-continut">
+        <div class="card-choice">
+            <div class="pret">
+                <div class="number-price">
+                    <h3 CLASS="NUMBER-PRICE-STYLE">159</h3>
+                    <p class="ron-price">RON</p>
+                </div>
+            </div>
+            <button type="button" class="button-sty2">
+                Alege
+            </button>
+            <div class="price-details">
+                <p>pănă la 100 răspunsuri</p>
+                <p>upload imagini până la 16Mb</p>
+                <p>formular de confirmare cu până la 10 întrebări</p>
+                <p>export listă participanți</p>
+                <p>invitație online personalizată</p>
+                <p>link unic invitație</p>
+                <p>confirmări instant</p>
             </div>
         </div>
-        <button type="button" class="button-sty">
-            Alege
-        </button>
-        <div class="price-details">
-            <p>pănă la 10 răspunsuri</p>
-            <p>upload imagini până la 3Mb</p>
-            <p>formular de confirmare cu până la 5 întrebări</p>
-            <p>invitație online personalizată</p>
-            <p>link unic invitație</p>
-            <p>confirmări instant</p>
+       </div> 
+    
+    </div>
+   
+    <!-- CARD PREMIUM PRICE-->
+    <div class="cards-sty-plus">
+      <DIV CLASS="TITLE-CARD-STYLE3">
+        <span class="card-popular-plus">POPULAR</span>
+        <h1 class="title-st">PERSONAL +</h1></DIV>
+      <div class="cards-continut">
+       <div class="card-choice">
+           <div class="pret">
+               <div class="number-price">
+                   <h3 CLASS="NUMBER-PRICE-STYLE">219</h3>
+                   <p class="ron-price">RON</p>
+               </div>
+           </div>
+           <button type="button" class="button-sty3">
+               Alege
+           </button>
+           <div class="price-details">
+               <p>pănă la 10 răspunsuri</p>
+               <p>upload imagini până la 32Mb</p>
+               <p>formular de confirmare cu până la 20 întrebări</p>
+               <p>export listă participanți</p>
+               <p>invitație online personalizată</p>
+               <p>link unic invitație</p>
+               <p>confirmări instant</p>
+           </div>
         </div>
+       </div> 
+    
     </div>
-   </div> 
-</div>
-
- <!-- CARD STANDARD PRICE-->
-<div class="cards-sty">
-    <DIV CLASS="TITLE-CARD-STYLE"><h1 class="title-st">PERSONAL</h1></DIV>
-    <div class="cards-continut">
-     <div class="card-choice">
-         <div class="pret">
-             <div class="number-price">
-                 <h3 CLASS="NUMBER-PRICE-STYLE">159</h3>
-                 <p class="ron-price">RON</p>
-             </div>
-         </div>
-         <button type="button" class="button-sty">
-             Alege
-         </button>
-         <div class="price-details">
-             <p>pănă la 100 răspunsuri</p>
-             <p>upload imagini până la 16Mb</p>
-             <p>formular de confirmare cu până la 10 întrebări</p>
-             <p>export listă participanți</p>
-             <p>invitație online personalizată</p>
-             <p>link unic invitație</p>
-             <p>confirmări instant</p>
-         </div>
-     </div>
-    </div> 
- 
- </div>
-
- <!-- CARD PREMIUM PRICE-->
- <div class="cards-sty">
-    <DIV CLASS="TITLE-CARD-STYLE"><h1 class="title-st">PERSONAL +</h1></DIV>
-    <div class="cards-continut">
-     <div class="card-choice">
-         <div class="pret">
-             <div class="number-price">
-                 <h3 CLASS="NUMBER-PRICE-STYLE">219</h3>
-                 <p class="ron-price">RON</p>
-             </div>
-         </div>
-         <button type="button" class="button-sty">
-             Alege
-         </button>
-         <div class="price-details">
-             <p>pănă la 10 răspunsuri</p>
-             <p>upload imagini până la 32Mb</p>
-             <p>formular de confirmare cu până la 20 întrebări</p>
-             <p>export listă participanți</p>
-             <p>invitație online personalizată</p>
-             <p>link unic invitație</p>
-             <p>confirmări instant</p>
-         </div>
-     </div>
-    </div> 
- 
- </div>
-
-</div>
-</div>
-
-</div>
-     </div>
-    </div>
-</section>
+   
+   </div>
+   </div>
+   
+   </div>
+        </div>
+       </div>
+   </section>
 
 <!--                                                                                    FOOTER                                                               -->
 
