update subcirbe button

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <li class="navbar-menu-items">
       <a class="nav-link" href="index.html"> Home</a></li>
     <li class="navbar-menu-items">
-      <a class="nav-link" href="index.html">Produse</a></li>
+      <a class="nav-link" href="produse.html">Produse</a></li>
     <li class="navbar-menu-items">
-      <a class="nav-link" href="index.html">Prețuri</a></li>
+      <a class="nav-link" href="price.html">Prețuri</a></li>
     <li class="navbar-menu-items">
-      <a class="nav-link" href="index.html">Contact</a></li>
+      <a class="nav-link" href="contact.html">Contact</a></li>
   </ul></div>
  </div>
 </nav>
@@ -364,7 +364,7 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
           <div class="d-flex flex-column flex-sm-row w-100 gap-2">
             <label for="newsletter1" class="visually-hidden">Email address</label>
             <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-            <button class="btn btn-secondary" type="button">Subscribe</button>
+            <button class="btn btn-danger" type="button">Subscribe</button>
           </div>
         </form>
       </div>
