add link href pt google fonts for  price page

--- a/price.html
+++ b/price.html
@@ -11,9 +11,12 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
    crossorigin="anonymous"> <!-- link cod Bootstrap-->
 
+   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+   
 </head>
 <body>
-  
+
 <!--Navbar -->
 <div class="w-100 rcio-bg-light rcio-nav-wrapper rcio-py-10">
   <div class="rcio-card-position rcio-h-100 rcio-m-auto ">
