add/update link google fonts/navbar for contact page

--- a/contact.html
+++ b/contact.html
@@ -11,85 +11,35 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
    crossorigin="anonymous"> <!-- link cod Bootstrap-->
 
+   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
 <!--Navbar -->
-<!--<div class="w-100 bg-light nav-wrapper py-10">
-    <div class="card-position h-100 m-auto-nav d-flex max-width-nav border-semi-transparent">
-        <a href="index.html" class="d-flex self-center pl-20 font-special font-size-xs">
-            <h1 class="color-logo bold">Melind</h1>
-        </a>
-      
- <nav class="navbar">
-<ul class="navbar-menu">
-<li class="navbar-menu-items">
-    <a class="nav-link" href="index.html"> Home </a>
-</li>
-<li class="navbar-menu-items">
-    <a class="nav-link" href="services.html"> Services </a>
-</li>
-<li class="navbar-menu-items">
-    <a class="nav-link" href="about.html"> About us </a>
-</li>
-<li class="navbar-menu-items">
-    <a class="nav-link" href="contact.html"> Contact </a>
-</li>
-</ul>
-</nav>-->
- <!--
-<nav class="mobile-visible nav-container self-center">
-    <details class="nav-toggle">
-      <summary class="nav-toggle-button px-40">
-        <span class="material-symbols-outlined">menu</span>
-      </summary>
-      <ul class="mobile-nav-list nav-list d-flex flex-col bg-white w-100">
-        <li class="px-10 py-20 d-flex mr-auto gap-10">
-          <span class="material-symbols-outlined">home</span>
-          <a href="/">Home</a>
-        </li>
-        <li class="px-10 py-20 d-flex mr-auto gap-10">
-          <span class="material-symbols-outlined">book</span>
-          <a href="./Services.html">Services</a>
-        </li>
-        <li class="px-10 py-20 d-flex mr-auto gap-10">
-          <span class="material-symbols-outlined">book</span>
-          <a href="./about.html">About Us</a>
-        </li>
-        <li class="px-10 py-20 d-flex mr-auto gap-10">
-          <span class="material-symbols-outlined">contact_support</span>
-          <a href="./contact.html">Contact</a>
-        </li>
-      </ul>
-    </details>
+<div class="w-100 rcio-bg-light rcio-nav-wrapper rcio-py-10">
+  <div class="rcio-card-position rcio-h-100 rcio-m-auto ">
+    <nav class="rcio-navbar">
+    <div class="rcio-text-center"><a class="navbar-brand" href="index.html"><h3 class="color-logo  rcio-font-family-logo">Melind</h3></a>
+   </div> 
+  
+   <div>
+    <ul class="rcio-navbar-menu">
+      <li class="navbar-menu-items">
+        <a class="nav-link" href="index.html"> Home</a></li>
+      <li class="navbar-menu-items">
+        <a class="nav-link" href="produse.html">Produse</a></li>
+      <li class="navbar-menu-items">
+        <a class="nav-link" href="price.html">Prețuri</a></li>
+      <li class="navbar-menu-items">
+        <a class="nav-link" href="contact.html">Contact</a></li>
+    </ul></div>
+   </div>
   </nav>
-Navbar -->
-<nav class="navbar  navbar-expand-lg  bg-body-tertiary  rounded" aria-label="Eleventh navbar example">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><h3 class="color-logo bold">Melind</h3></a>
+  </div>
+  </div>
 
-      <div class="collapse navbar-collapse" id="navbarsExample09">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="produse.html">Produse</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="price.html">Preturi</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active"  href="contact.html">Contact</a>
-          </li>
-        </ul>
-        
-      </div>
-    </div>
-  </nav>
-
-</div>
-</div>
 
  
  <!-- TEXT 50/50 (50 TEXT, 50 FORMULAR) -->
