Update index.html link for pages

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 <div class="w-100 rcio-bg-light rcio-nav-wrapper rcio-py-10">
 <div class="rcio-card-position rcio-h-100 rcio-m-auto ">
   <nav class="rcio-navbar">
-  <div class="rcio-text-center"><a class="navbar-brand" href="index.html"><h3 class="color-logo  rcio-font-family-logo">Melind</h3></a>
+  <div class="rcio-text-center"><a class="navbar-brand" href="./index.html"><h3 class="color-logo  rcio-font-family-logo">Melind</h3></a>
  </div> 
 
  <div>
   <ul class="rcio-navbar-menu">
     <li class="navbar-menu-items">
-      <a class="nav-link" href="index.html"> Home</a></li>
+      <a class="nav-link" href="./index.html"> Home</a></li>
     <li class="navbar-menu-items">
-      <a class="nav-link" href="produse.html">Produse</a></li>
+      <a class="nav-link" href="./produse.html">Produse</a></li>
     <li class="navbar-menu-items">
-      <a class="nav-link" href="price.html">Prețuri</a></li>
+      <a class="nav-link" href="./price.html">Prețuri</a></li>
     <li class="navbar-menu-items">
-      <a class="nav-link" href="contact.html">Contact</a></li>
+      <a class="nav-link" href="./contact.html">Contact</a></li>
   </ul></div>
  </div>
 </nav>
@@ -340,10 +340,10 @@ Obții confirmări și alcătuiești automat lista participanților</h3>
       <div class="col-6 col-md-2 mb-3">
         <h5>Produs</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary">Home</a></li>
+          <li class="nav-item mb-2"><a href="./index.html" class="nav-link p-0 text-body-secondary">Home</a></li>
           <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Modele Invitatii</a></li>
-          <li class="nav-item mb-2"><a href="price.html" class="nav-link p-0 text-body-secondary">Prețuri</a></li>
-          <li class="nav-item mb-2"><a href="contact.html" class="nav-link p-0 text-body-secondary">Contact</a></li>
+          <li class="nav-item mb-2"><a href="./price.html" class="nav-link p-0 text-body-secondary">Prețuri</a></li>
+          <li class="nav-item mb-2"><a href="./contact.html" class="nav-link p-0 text-body-secondary">Contact</a></li>
         </ul>
       </div>
 
